# watercrest

./: LICENSE  README.md  justfile  pyproject.toml
tests/: test_combat_display.py  test_weapon_triangle.py
watercrest/entity/: character.py  character_class.py  weapon.py
watercrest/entity/resources/: weapon.toml
watercrest/service/: combat_service.py  weapon_triangle_service.py
watercrest/utils/: distribution_util.py
watercrest/utils/resources/: true_hit_distribution.json
